tests/reference/asr-Same_type-928201f.stderr
semantic error: same_type_as is not implemented yet
 --> tests/errors/Same_type.f90:2:14
  |
2 |     print *, same_type_as(1.0, 1.0)
  |              ^^^^^^^^^^^^^^^^^^^^^^ 
